# LeRobot-cpp

./: CMakeLists.txt  README.md  build.sh  setup.sh
src/: act_policy.cpp  act_policy.h  dataset.cpp  dataset.h  main.cpp  train.cpp
